third_party/move/move-compiler-v2/tests/ability-check/v1-locals/drop_conditional.exp

Diagnostics:
error: local `x` of type `Cup<R>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-locals/drop_conditional.move:12:9
   │
12 │         &x;
   │         ^^ implicitly dropped here since it is no longer used

error: local `x` of type `Pair<S, R>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-locals/drop_conditional.move:14:9
   │
14 │         &x;
   │         ^^ implicitly dropped here since it is no longer used
